<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Fake Chat Messenger</string>

    <!-- General Strings -->
    <string name="hide" translatable="false">Hide</string>
    <string name="connection_error" translatable="false">Connection Error</string>
    <string name="no_internet" translatable="false">No internet connection please try again later</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="some_error" translatable="false">Some error occurred, try again later</string>
    <string name="list_no_result" translatable="false">Sorry, There are no results here!</string>

    <!--  Facebook integrate-->
    <string name="facebook_app_id" translatable="false">601780251566765</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb601780251566765</string>
    <string name="facebook_client_token" translatable="false">124690afec1a98e5935aeea859347132</string>

    <string name="next">Tiếp theo</string>

    <string name="txt_language_en">Tiếng Anh</string>
    <string name="txt_language_vi">Tiếng Việt</string>
    <string name="txt_language_spanish">Tiếng Tây Ban Nha</string>
    <string name="txt_language_portuguese">Tiếng Bồ Đào Nha</string>
    <string name="txt_language_russiane">Tiếng Nga</string>
    <string name="txt_language_ja">Tiếng Nhật</string>
    <string name="txt_language_korean">Tiếng Hàn</string>
    <string name="txt_language_french">Tiếng Pháp</string>
    <string name="txt_language_german">Tiếng Đức</string>
    <string name="txt_language_chi">Tiếng Trung Quốc</string>

    <string name="skip">Nhảy</string>
    <string name="setting">Cài đặt</string>
    <string name="privacy">Sự riêng tư</string>
    <string name="txt_download">Tải xuống</string>
    <string name="txt_language">Ngôn ngữ</string>
    <string name="txt_yc_connection_internet">Kết nối mạng để thực hiện tiếp</string>
    <string name="txt_home">Trang chủ</string>

    <!-- String new -->
    <string name="txt_option_1" translatable="false">Open FB and Copy link video</string>
    <string name="txt_option_2" translatable="false">Open “Video Downloader” and Paste link video</string>
    <string name="txt_option_3" translatable="false">Press Download and Choose the type you want to download</string>
    <string name="txt_option_4" translatable="false">Done! The download will be start automatically</string>
    <string name="txt_insert_link" translatable="false">Insert link</string>
    <string name="privacy_policy">When you use our services, you’re trusting us with your information. We understand this is a big responsibility and work hard to protect your information and put you in control. This Privacy Policy is meant to help you understand what information we collect, why we collect it, and how you can update, manage, export, and delete your information.</string>
    <string name="txt_intro_title" translatable="false">Paste link to download</string>
    <string name="txt_intro_previous" translatable="false">Previous</string>
    <string name="txt_drawer_header_pro_title" translatable="false">Pro version</string>
    <string name="txt_drawer_header_pro_desc" translatable="false">Remove Ads with one time purchase</string>
    <string name="txt_menu_more_app" translatable="false">More app</string>
    <string name="txt_menu_rate_feedback" translatable="false">Rate and Feedback</string>
    <string name="txt_purchase_update_pro" translatable="false">Upgrade to Pro version</string>
    <string name="txt_purchase_update_pro_subtitle" translatable="false">Enjoy your premium member</string>
    <string name="txt_purchase_update_pro_desc1" translatable="false">Unlimited Features</string>
    <string name="txt_purchase_update_pro_desc2" translatable="false">No ADS</string>
    <string name="txt_purchase_update_pro_desc3" translatable="false">Fast Downloads</string>
    <string name="txt_purchase_update_pro_continue" translatable="false">Continue</string>

    <string name="txt_nav_fakemessenger_chats">Chats</string>
    <string name="txt_nav_fakemessenger_calls">Calls</string>
    <string name="txt_nav_fakemessenger_people">People</string>
    <string name="txt_create_new">Create New</string>
    <string name="txt_start_your_conversations">Start your conversations</string>
    <string name="txt_last_conversation">Last Conversation</string>
    <string name="txt_more_apps">More Apps</string>
    <string name="txt_contact_label">Contact</string>
    <string name="txt_search">Search</string>
    <string name="txt_make_video_call">Make video call</string>
    <string name="txt_make_voice_call">Make voice call</string>
    <string name="txt_incomming_call">Incomming call</string>
    <string name="txt_calling">Calling</string>
    <string name="txt_photo_of_incomming_video_call">Photo of incomming video call  </string>
    <string name="txt_name">Name</string>
    <string name="txt_decline">DECLINE</string>
    <string name="txt_answer">ANSWER</string>
    <string name="txt_reply">REPLY</string>
    <string name="txt_video_call_on_messenger">Video call on messenger</string>
    <string name="txt_voice_call_on_messenger">Voice call on messenger</string>
    <string name="txt_permission_denied_message">The app needs permission to work</string>

    <string name="video_test">asset:///idol.mp4</string>
</resources>
