<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDrawerHome"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/txt_home" />

        <item
            android:id="@+id/language"
            android:icon="@drawable/ic_menu_language"
            android:title="@string/txt_language" />
        <item
            android:id="@+id/moreApp"
            android:icon="@drawable/ic_menu_moreapp"
            android:title="@string/txt_menu_more_app" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_menu_review"
            android:title="@string/txt_menu_rate_feedback" />

        <item
            android:id="@+id/privacy"
            android:icon="@drawable/ic_menu_privacy"
            android:title="@string/privacy" />
    </group>
    <group
        android:id="@+id/itemAdsView"
        android:checkableBehavior="single">
        <item xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/navi_item_create_notifications_sound"
            android:title="@null"
            app:actionLayout="@layout/layout_drawer_ads_item"
            app:showAsAction="ifRoom" />
    </group>
</menu>