<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/white"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen16"
    android:layout_marginTop="@dimen/dimen24"
    android:paddingBottom="@dimen/dimen16">

    <TextView
        style="@style/styleDrawerHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen56"
        android:text="@string/setting"
        android:gravity="center_vertical"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_pro_bg_height"
        android:background="@drawable/bg_drawer_heaer_pro"
        android:padding="@dimen/dimen16">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dimen32"
            android:layout_height="@dimen/dimen32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            android:padding="@dimen/dimen4"
            app:shapeAppearanceOverlay="@style/styleDrawerProIcon"
            app:srcCompat="@drawable/ic_menu_premium" />

        <TextView
            style="@style/styleDrawerHeaderProTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/txt_drawer_header_pro_title"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/styleDrawerHeaderProDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:text="@string/txt_drawer_header_pro_desc"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>