<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.merryblue.fakemessenger.ui.purchase.PurchaseViewModel"
            />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/_12sdp"
        tools:context=".ui.purchase.PurchaseFragment">

        <TextView
            style="@style/styleDrawerHeaderProTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:text="@string/txt_purchase_update_pro"
            android:textSize="@dimen/text_size_24"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            style="@style/styleDrawerHeaderProDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_32sdp"
            android:text="@string/txt_purchase_update_pro_subtitle"
            android:textSize="@dimen/text_size_14"
            android:textColor="@color/gray600"
            />

        <include layout="@layout/item_row"
            app:bg="@{viewModel.tickIcon}"
            app:textNumber="@{``}"
            app:itemTitle="@{@string/txt_purchase_update_pro_desc1}"
            />

        <include layout="@layout/item_row"
            app:bg="@{viewModel.tickIcon}"
            app:textNumber="@{``}"
            app:itemTitle="@{@string/txt_purchase_update_pro_desc2}"
            />

        <include layout="@layout/item_row"
            app:bg="@{viewModel.tickIcon}"
            app:textNumber="@{``}"
            app:itemTitle="@{@string/txt_purchase_update_pro_desc3}"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/purchaseRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_weight="1"
            android:background="@color/white"
            />

        <TextView
            style="@style/styleCommonActiveButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_28sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/txt_purchase_update_pro_continue"
            />
    </LinearLayout>
</layout>