<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.exoplayer2.ui.StyledPlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:use_controller="false"
            android:visibility="visible"
            app:resize_mode="fill"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="9:16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_switch_video_voice"
            app:layout_constraintWidth_percent="0.305555">

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_timeCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/StyleContent16"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/cl_preview"
            app:layout_constraintStart_toStartOf="@+id/cl_preview"
            app:layout_constraintEnd_toEndOf="@id/cl_preview"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_switch_video_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_switch_video_voice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:padding="16dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_switch_video_voice"
            app:layout_constraintBottom_toBottomOf="@+id/img_switch_video_voice"
            tools:padding="16dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_bg_user_contact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/image_call_test"
            tools:scaleType="fitXY"
            tools:visibility="gone"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_control_root"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="360:128"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_bottom_control_calling"
            tools:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_top_line_bottom_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_top_line_bottom_control"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_marginTop="8dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_bottom_control"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/img_top_line_bottom_control"
                tools:paddingVertical="12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_on_off_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera_bottom_control"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_switch_camera"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_switch_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_switch_camera_bottom_control"
                    app:layout_constraintStart_toEndOf="@+id/img_on_off_camera"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_mic_bottom_control"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_mic_bottom_control"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_micro_bottom_control"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/img_end_call"
                    app:layout_constraintStart_toEndOf="@+id/img_switch_camera"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_end_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_end_call_bottom_control"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_mic_bottom_control"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_fillter_calling"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_bottom_control_root"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_back"
            tools:paddingHorizontal="16dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_emoji_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_emoji_calling"
                app:layout_constraintBottom_toTopOf="@+id/img_light_calling"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_light_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_light_calling"
                app:layout_constraintBottom_toTopOf="@+id/img_fillter_calling"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_emoji_calling" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_fillter_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_fillter_calling"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_light_calling" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_avatar_contact_calling"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.27777"
            tools:layout_marginTop="144dp"
            tools:visibility="visible"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Hà Anh Tuấn"
            style="@style/StyleContent28"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar_contact_calling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_calling_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/StyleContent16"
            android:textColor="@color/white"
            tools:text="05:00" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_accept_calling"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintHeight_percent="0.175"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_decline_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:paddingHorizontal="48dp"
                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_decline_calling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_decline_calling"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_decline_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_decline"
                    style="@style/StyleContent14"
                    android:textColor="@color/colorF3F4F6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_decline_calling"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_answer_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:paddingHorizontal="48dp"
                android:background="?attr/selectableItemBackground">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_answer_calling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/ic_answer_video_calling"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_answer_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_answer"
                    style="@style/StyleContent14"
                    android:textColor="@color/colorF3F4F6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_answer_calling"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/cl_accept_calling"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:paddingVertical="80dp"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_reply_calling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_reply_calling"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_reply"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/txt_reply"
                style="@style/StyleContent14"
                android:textColor="@color/colorF1F1F1"
                android:gravity="center_vertical"
                app:layout_constraintStart_toEndOf="@+id/img_reply_calling"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>